// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProviderForm 预设新增行金标 > codex > E-FlowCode 1`] = `
{
  "apiKeyLocations": [
    "settingsConfig.auth.OPENAI_API_KEY",
  ],
  "row": {
    "icon": "eflowcode",
    "iconColor": "#000000",
    "meta": {
      "apiFormat": "openai_responses",
      "endpointAutoSelect": true,
    },
    "name": "E-FlowCode",
    "notes": "",
    "presetCategory": "third_party",
    "presetId": "codex-<index>",
    "settingsConfig": {
      "auth": {
        "OPENAI_API_KEY": "sk-golden-test",
      },
      "config": "model_provider = "custom"
model = "gpt-5.6-sol"
model_reasoning_effort = "high"
disable_response_storage = true

[model_providers.custom]
name = "E-FlowCode"
base_url = "https://e-flowcode.cc/v1"
wire_api = "responses"
requires_openai_auth = true
model_context_window = 1000000
model_auto_compact_token_limit = 9000000",
    },
    "websiteUrl": "https://e-flowcode.cc",
  },
}
`;

exports[`ProviderForm 预设新增行金标 > codex > Nvidia 1`] = `
{
  "apiKeyLocations": [
    "settingsConfig.auth.OPENAI_API_KEY",
  ],
  "row": {
    "icon": "nvidia",
    "iconColor": "#000000",
    "meta": {
      "apiFormat": "openai_chat",
      "codexChatReasoning": {
        "effortParam": "reasoning_effort",
        "effortValueMode": "passthrough",
        "outputFormat": "reasoning_content",
        "supportsEffort": true,
        "supportsThinking": true,
        "thinkingParam": "none",
      },
      "endpointAutoSelect": true,
    },
    "name": "Nvidia",
    "notes": "",
    "presetCategory": "aggregator",
    "presetId": "codex-<index>",
    "settingsConfig": {
      "auth": {
        "OPENAI_API_KEY": "sk-golden-test",
      },
      "config": "model_provider = "custom"
model = "moonshotai/kimi-k3"
model_reasoning_effort = "high"
disable_response_storage = true

[model_providers.custom]
name = "nvidia"
base_url = "https://integrate.api.nvidia.com/v1"
wire_api = "responses"
requires_openai_auth = true",
      "modelCatalog": {
        "models": [
          {
            "contextWindow": 1048576,
            "defaultReasoningLevel": "high",
            "displayName": "Kimi K3",
            "inputModalities": [
              "text",
              "image",
            ],
            "model": "moonshotai/kimi-k3",
            "reasoningLevels": [
              "low",
              "high",
              "max",
            ],
          },
        ],
      },
    },
    "websiteUrl": "https://build.nvidia.com",
  },
}
`;

exports[`ProviderForm 预设新增行金标 > codex > OpenAI Official 1`] = `
{
  "apiKeyLocations": [],
  "row": {
    "icon": "openai",
    "iconColor": "#00A67E",
    "meta": {
      "endpointAutoSelect": true,
    },
    "name": "OpenAI Official",
    "notes": "",
    "presetCategory": "official",
    "presetId": "codex-<index>",
    "settingsConfig": {
      "auth": {},
      "config": "",
    },
    "websiteUrl": "https://chatgpt.com/codex",
  },
}
`;

exports[`ProviderForm 预设新增行金标 > codex > xAI (Grok) 1`] = `
{
  "apiKeyLocations": [
    "settingsConfig.auth.OPENAI_API_KEY",
  ],
  "row": {
    "icon": "xai",
    "iconColor": "#000000",
    "meta": {
      "apiFormat": "openai_responses",
      "endpointAutoSelect": true,
    },
    "name": "xAI (Grok)",
    "notes": "",
    "presetCategory": "third_party",
    "presetId": "codex-<index>",
    "settingsConfig": {
      "auth": {
        "OPENAI_API_KEY": "sk-golden-test",
      },
      "config": "model_provider = "custom"
model = "grok-4.5"
model_reasoning_effort = "high"
disable_response_storage = true

[model_providers.custom]
name = "xai"
base_url = "https://api.x.ai/v1"
wire_api = "responses"
requires_openai_auth = true",
      "modelCatalog": {
        "models": [
          {
            "contextWindow": 500000,
            "displayName": "Grok 4.7",
            "inputModalities": [
              "text",
              "image",
            ],
            "model": "grok-4.7",
            "reasoningLevels": [
              "low",
              "medium",
              "high",
              "xhigh",
            ],
            "supportsParallelToolCalls": true,
          },
          {
            "contextWindow": 500000,
            "displayName": "Grok 4.5",
            "inputModalities": [
              "text",
              "image",
            ],
            "model": "grok-4.5",
            "reasoningLevels": [
              "low",
              "medium",
              "high",
              "xhigh",
            ],
            "supportsParallelToolCalls": true,
          },
        ],
      },
    },
    "websiteUrl": "https://x.ai/api",
  },
}
`;
